fixed nav bar and products wrap around filter blah blah blah

--- a/style.css
+++ b/style.css
@@ -136,7 +136,7 @@ footer p {
 
 }
 .container {
-  width: 80%;
+  width: 90%;
   margin-left: auto;
   margin-right: auto;
 }
